Sync all content

--- a/content/resources/14771-f21-lecture-20-v2.md
+++ b/content/resources/14771-f21-lecture-20-v2.md
@@ -3,6 +3,7 @@ body: ''
 content_type: resource
 draft: false
 file: /courses/14-771-development-economics-fall-2021/14771-f21-lecture-20-v2_360p_16_9.mp4
+file_size: 142171137
 file_type: video/mp4
 image_metadata:
   caption: ''
@@ -36,6 +37,6 @@ video_metadata:
 ---
 Description: Concludes discussion of redistribution. Then begins discussion of tax, with this lecture presenting broad empirical patterns and then empirical evidence on the VAT.
 
-{{% resource_link "72003b12-1cee-46a9-907f-1c8964441787" "Session 20 lecture slides (PDF)" %}}
+{{% resource_link "b8ab3556-45fb-4b64-8272-455ab37947ff" "Session 20 lecture slides (PDF)" %}}
 
 Instructor: Ben Olken
