--- a/content/resources/14771-f21-lecture-16-v2_1.md
+++ b/content/resources/14771-f21-lecture-16-v2_1.md
@@ -3,6 +3,7 @@ body: ''
 content_type: resource
 draft: false
 file: /courses/14-771-development-economics-fall-2021/14771-f21-lecture-16-v2_1_360p_16_9.mp4
+file_size: 158688096
 file_type: video/mp4
 image_metadata:
   caption: ''
