--- a/content/resources/mit14_771f21_lec17.md
+++ b/content/resources/mit14_771f21_lec17.md
@@ -3,6 +3,7 @@ body: ''
 content_type: resource
 draft: false
 file: /courses/14-771-development-economics-fall-2021/mit14_771f21_lec17.pdf
+file_size: 6467787
 file_type: application/pdf
 image_metadata:
   caption: ''
