--- a/content/resources/14771-f21-lecture-24-v2.md
+++ b/content/resources/14771-f21-lecture-24-v2.md
@@ -3,6 +3,7 @@ body: ''
 content_type: resource
 draft: false
 file: /courses/14-771-development-economics-fall-2021/14771-f21-lecture-24-v2_360p_16_9.mp4
+file_size: 128213576
 file_type: video/mp4
 image_metadata:
   caption: ''
@@ -37,6 +38,6 @@ video_metadata:
 ---
 Description: Presents stylized facts about credit markets in developing countries, introduces simple models of moral hazard and adverse selection to illustrate how frictions might occur, and discusses Karlan and Zinman (2009).
 
-Session 24 lecture slides: {{% resource_link "19775afd-df8d-477d-8fa2-77e9ddd48325" "Credit (Part 1) (PDF)" %}}
+Session 24 lecture slides: {{% resource_link "bbe52399-75ea-4277-aeec-0bb5650e572b" "Credit (Part 1) (PDF)" %}}
 
 Instructor: Ben Olken
